# docs

./: 404.html  Home.md  Traducir el ejecutable.md  Translate Executable.md  Translate Raw Files.md  dfrus-py.md  index.html  mkdocs.yml  pyproject.toml  readme.md  sitemap.xml
.github/: dependabot.yml
.github/workflows/: deploy-docs.yml  deploy_docs.yml  dry-run.yml
docs/en/: index.md
docs/ru/: index.md
ru/: index.html
