[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["insolor <insolor@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.2.6"
mkdocs-minify-plugin = "^0.7.1"
mkdocs-redirects = "^1.2.1"
mkdocs-static-i18n = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
