[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["insolor <insolor@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.6.14"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-redirects = "^1.2.2"
mkdocs-static-i18n = "^1.3.0"
mkdocs-git-revision-date-localized-plugin = "^1.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
